--- a/dom/projects/vc9-1.4/domTest.vcproj
+++ b/dom/projects/vc9-1.4/domTest.vcproj
@@ -1,64 +1,209 @@
-<?xml version="1.0" ?><VisualStudioProject Keyword="Win32Proj" Name="domTest" ProjectGUID="{32FA559B-77AB-4344-B102-BB671A299561}" ProjectType="Visual C++" RootNamespace="domTest" TargetFrameworkVersion="131072" Version="9.00">
+<?xml version="1.0" encoding="Windows-1252"?>
+<VisualStudioProject
+	ProjectType="Visual C++"
+	Version="9.00"
+	Name="domTest"
+	ProjectGUID="{32FA559B-77AB-4344-B102-BB671A299561}"
+	RootNamespace="domTest"
+	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
+	>
 	<Platforms>
-		<Platform Name="Win32"/>
+		<Platform
+			Name="Win32"
+		/>
 	</Platforms>
 	<ToolFiles>
 	</ToolFiles>
 	<Configurations>
-		<Configuration CharacterSet="2" ConfigurationType="1" IntermediateDirectory="..\..\build\vc9-1.4-d\obj\$(ProjectName)" Name="Debug|Win32" OutputDirectory="..\..\build\vc9-1.4-d\">
-			<Tool Name="VCPreBuildEventTool"/>
-			<Tool Name="VCCustomBuildTool"/>
-			<Tool Name="VCXMLDataGeneratorTool"/>
-			<Tool Name="VCWebServiceProxyGeneratorTool"/>
-			<Tool Name="VCMIDLTool"/>
-			<Tool AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\external-libs\boost&quot;" BasicRuntimeChecks="3" DebugInformationFormat="3" Detect64BitPortabilityProblems="false" DisableLanguageExtensions="true" MinimalRebuild="false" Name="VCCLCompilerTool" Optimization="0" PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;DOM_DYNAMIC;BOOST_ALL_NO_LIB" RuntimeLibrary="3" UsePrecompiledHeader="0" WarningLevel="3"/>
-			<Tool Name="VCManagedResourceCompilerTool"/>
-			<Tool Name="VCResourceCompilerTool"/>
-			<Tool Name="VCPreLinkEventTool"/>
-			<Tool AdditionalDependencies="libcollada14dom21-d.lib libboost_filesystem-d.lib libboost_system-d.lib" AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;&quot;..\..\external-libs\boost\lib\vc9&quot;" DataExecutionPrevention="0" GenerateDebugInformation="true" LinkIncremental="2" Name="VCLinkerTool" RandomizedBaseAddress="1" SubSystem="1" TargetMachine="1"/>
-			<Tool Name="VCALinkTool"/>
-			<Tool Name="VCManifestTool"/>
-			<Tool Name="VCXDCMakeTool"/>
-			<Tool Name="VCBscMakeTool"/>
-			<Tool Name="VCFxCopTool"/>
-			<Tool Name="VCAppVerifierTool"/>
-			
-			<Tool Name="VCPostBuildEventTool"/>
+		<Configuration
+			Name="Debug|Win32"
+			OutputDirectory="..\..\build\vc9-1.4-d\"
+			IntermediateDirectory="..\..\build\vc9-1.4-d\obj\$(ProjectName)"
+			ConfigurationType="1"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="0"
+				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\external-libs\boost&quot;"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;DOM_DYNAMIC;BOOST_ALL_NO_LIB"
+				MinimalRebuild="false"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="3"
+				DisableLanguageExtensions="true"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				Detect64BitPortabilityProblems="false"
+				DebugInformationFormat="3"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="libcollada14dom22-d.lib libboost_filesystem-d.lib libboost_system-d.lib"
+				LinkIncremental="2"
+				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;&quot;..\..\external-libs\boost\lib\vc9&quot;"
+				GenerateDebugInformation="true"
+				SubSystem="1"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
+				TargetMachine="1"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
-		<Configuration CharacterSet="2" ConfigurationType="1" IntermediateDirectory="..\..\build\vc9-1.4\obj\$(ProjectName)" Name="Release|Win32" OutputDirectory="..\..\build\vc9-1.4\" WholeProgramOptimization="1">
-			<Tool Name="VCPreBuildEventTool"/>
-			<Tool Name="VCCustomBuildTool"/>
-			<Tool Name="VCXMLDataGeneratorTool"/>
-			<Tool Name="VCWebServiceProxyGeneratorTool"/>
-			<Tool Name="VCMIDLTool"/>
-			<Tool AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\external-libs\boost&quot;" DebugInformationFormat="0" Detect64BitPortabilityProblems="false" DisableLanguageExtensions="true" Name="VCCLCompilerTool" PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;DOM_DYNAMIC;BOOST_ALL_NO_LIB" RuntimeLibrary="2" UsePrecompiledHeader="0" WarningLevel="3" WholeProgramOptimization="true"/>
-			<Tool Name="VCManagedResourceCompilerTool"/>
-			<Tool Name="VCResourceCompilerTool"/>
-			<Tool Name="VCPreLinkEventTool"/>
-			<Tool AdditionalDependencies="libcollada14dom21.lib libboost_filesystem.lib libboost_system.lib" AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;&quot;..\..\external-libs\boost\lib\vc9&quot;" DataExecutionPrevention="0" EnableCOMDATFolding="2" GenerateDebugInformation="false" LinkIncremental="1" LinkTimeCodeGeneration="1" Name="VCLinkerTool" OptimizeReferences="2" RandomizedBaseAddress="1" SubSystem="1" TargetMachine="1"/>
-			<Tool Name="VCALinkTool"/>
-			<Tool Name="VCManifestTool"/>
-			<Tool Name="VCXDCMakeTool"/>
-			<Tool Name="VCBscMakeTool"/>
-			<Tool Name="VCFxCopTool"/>
-			<Tool Name="VCAppVerifierTool"/>
-			
-			<Tool Name="VCPostBuildEventTool"/>
+		<Configuration
+			Name="Release|Win32"
+			OutputDirectory="..\..\build\vc9-1.4\"
+			IntermediateDirectory="..\..\build\vc9-1.4\obj\$(ProjectName)"
+			ConfigurationType="1"
+			CharacterSet="2"
+			WholeProgramOptimization="1"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				WholeProgramOptimization="true"
+				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\external-libs\boost&quot;"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;DOM_DYNAMIC;BOOST_ALL_NO_LIB"
+				RuntimeLibrary="2"
+				DisableLanguageExtensions="true"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				Detect64BitPortabilityProblems="false"
+				DebugInformationFormat="0"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="libcollada14dom22.lib libboost_filesystem.lib libboost_system.lib"
+				LinkIncremental="1"
+				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;&quot;..\..\external-libs\boost\lib\vc9&quot;"
+				GenerateDebugInformation="false"
+				SubSystem="1"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				LinkTimeCodeGeneration="1"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
+				TargetMachine="1"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
 	<References>
 	</References>
 	<Files>
-		<Filter Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx" Name="Source Files" UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
-			<File RelativePath="..\..\test\1.4\domTest.cpp">
+		<Filter
+			Name="Source Files"
+			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
+			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
+			>
+			<File
+				RelativePath="..\..\test\1.4\domTest.cpp"
+				>
 			</File>
-			<File RelativePath="..\..\test\1.4\export.cpp">
+			<File
+				RelativePath="..\..\test\1.4\export.cpp"
+				>
 			</File>
-			<File RelativePath="..\..\test\1.4\integrationExample.cpp">
+			<File
+				RelativePath="..\..\test\1.4\integrationExample.cpp"
+				>
 			</File>
 		</Filter>
-		<Filter Filter="h;hpp;hxx;hm;inl;inc;xsd" Name="Header Files" UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
-			<File RelativePath="..\..\test\1.4\domTest.h">
+		<Filter
+			Name="Header Files"
+			Filter="h;hpp;hxx;hm;inl;inc;xsd"
+			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
+			>
+			<File
+				RelativePath="..\..\test\1.4\domTest.h"
+				>
 			</File>
 		</Filter>
 	</Files>
