--- a/viewer/projects/vc8-Win/viewer.vcproj
+++ b/viewer/projects/vc8-Win/viewer.vcproj
@@ -11,6 +11,9 @@
 		<Platform
 			Name="Win32"
 		/>
+		<Platform
+			Name="x64"
+		/>
 	</Platforms>
 	<ToolFiles>
 	</ToolFiles>
@@ -97,6 +100,88 @@
 			/>
 		</Configuration>
 		<Configuration
+			Name="Debug|x64"
+			OutputDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			ConfigurationType="1"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				TargetEnvironment="3"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="0"
+				AdditionalIncludeDirectories="..\..\..\dom\include;..\..\..\dom\include\1.4;..\..\..\fx\include;..\..\..\rt\include;..\..\..\rt\include/1.4;&quot;..\..\..\rt\external-libs\devil\win32\include&quot;;&quot;..\..\..\rt\external-libs\bullet\include&quot;;&quot;$(CG_INC_PATH)&quot;;&quot;..\..\..\dom\external-libs\boost&quot;"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;CFX_PLATFORM_INCLUDE=\&quot;cfxWin.h\&quot;;_CRT_SECURE_NO_DEPRECATE;BOOST_ALL_NO_LIB"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="3"
+				RuntimeTypeInfo="false"
+				WarningLevel="4"
+				DebugInformationFormat="1"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="rt-d.lib fx-d.lib libcollada14dom22-sd.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib pcre-d.lib pcrecpp-d.lib libboost_system-d.lib minizip.lib DevIL.lib libboost_filesystem-d.lib libbulletmultithreaded_d.lib libbulletmath_d.lib libbulletopenglsupport_d.lib libbulletsoftbody_d.lib libbulletcollision_d.lib libbulletdynamics_d.lib"
+				OutputFile="$(OutDir)\$(ProjectName)-d.exe"
+				LinkIncremental="2"
+				AdditionalLibraryDirectories="&quot;..\..\..\rt\build\vc8-Win-d&quot;;&quot;..\..\..\dom\build\vc8-1.4-d&quot;;&quot;..\..\..\fx\build\vc8-Win-d&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib\x64&quot;;&quot;..\..\..\rt\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)\..\lib.x64&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\x64\&quot;;&quot;..\..\..\rt\external-libs\bullet\lib\vc8&quot;;&quot;..\..\..\dom\external-libs\boost\lib\x64&quot;;&quot;..\..\..\dom\external-libs\minizip\win32\lib&quot;"
+				GenerateManifest="true"
+				ManifestFile="$(IntDir)\$(TargetFileName).intermediate.manifest"
+				IgnoreDefaultLibraryNames="msvcrt"
+				GenerateDebugInformation="true"
+				SubSystem="2"
+				TargetMachine="17"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+				CommandLine="xcopy /Y ..\..\..\rt\external-libs\devil\win32\lib\DevIL.dll $(TargetDir)"
+			/>
+		</Configuration>
+		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="..\..\bin"
 			IntermediateDirectory="..\..\build\vc8-Win\obj\$(ProjectName)"
@@ -141,6 +226,80 @@
 				OutputFile="$(OutDir)\$(ProjectName).exe"
 				AdditionalLibraryDirectories="&quot;..\..\..\dom\build\vc8-1.4&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\vc8&quot;;&quot;..\..\..\fx\build\vc8-Win&quot;;&quot;..\..\..\rt\build\vc8-Win&quot;;&quot;..\..\..\rt\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)&quot;;&quot;..\..\..\rt\external-libs\bullet\lib\vc8&quot;;&quot;..\..\..\dom\external-libs\boost\lib\vc8&quot;;&quot;..\..\..\dom\external-libs\minizip\win32\lib&quot;"
 				GenerateDebugInformation="false"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+				CommandLine="xcopy /Y ..\..\..\rt\external-libs\devil\win32\lib\DevIL.dll $(TargetDir)"
+			/>
+		</Configuration>
+		<Configuration
+			Name="Release|x64"
+			OutputDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			ConfigurationType="1"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				TargetEnvironment="3"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="..\..\..\dom\include;..\..\..\dom\include\1.4;..\..\..\fx\include;..\..\..\rt\include;..\..\..\rt\include/1.4;&quot;..\..\..\rt\external-libs\devil\win32\include&quot;;&quot;..\..\..\rt\external-libs\bullet\include&quot;;&quot;$(CG_INC_PATH)&quot;;&quot;..\..\..\dom\external-libs\boost&quot;"
+				PreprocessorDefinitions="CFX_PLATFORM_INCLUDE=\&quot;cfxWin.h\&quot;;_CRT_SECURE_NO_DEPRECATE;WIN32;NDEBUG;_WINDOWS;BOOST_ALL_NO_LIB;NO_DEVIL"
+				RuntimeLibrary="2"
+				WarningLevel="4"
+				DebugInformationFormat="0"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="rt.lib fx.lib libcollada14dom22-s.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib pcre.lib pcrecpp.lib libboost_system.lib minizip.lib DevIL.lib libboost_filesystem.lib libbulletmath_d.lib libbulletmultithreaded_d.lib libbulletopenglsupport_d.lib libbulletsoftbody_d.lib libbulletcollision_d.lib libbulletdynamics_d.lib"
+				OutputFile="$(OutDir)\$(ProjectName).exe"
+				AdditionalLibraryDirectories="&quot;..\..\..\dom\build\vc8-1.4&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib\x64&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\x64&quot;;&quot;..\..\..\fx\build\vc8-Win&quot;;&quot;..\..\..\rt\build\vc8-Win&quot;;&quot;..\..\..\rt\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)\..\lib.x64&quot;;&quot;..\..\..\rt\external-libs\bullet\lib\vc8&quot;;&quot;..\..\..\dom\external-libs\boost\lib\x64&quot;;&quot;..\..\..\dom\external-libs\minizip\win32\lib&quot;"
+				GenerateDebugInformation="false"
+				TargetMachine="17"
 			/>
 			<Tool
 				Name="VCALinkTool"
